# Creating-an-Open-Source-Project-in-Python

./: .gitignore  LICENSE  README.md  conftest.py  notes.txt  pyproject.toml  reminder.py  tests.py  tox.ini
.github/workflows/: check.yaml
