[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["DanielMevs"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "8.1.0"
tox = "^4.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
tox = "^4.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
